static/css/s2.css
/* ... */
.bm-follow-button {
  color: white;
  display: inline-block;
}
.bm-follow-button img {
  width: 16px;
}

.beitMidrashUserText li {
  margin-top: 8px;
  margin-bottom: 8px;
}


.beitMidrashUserHeader {
  display: flex;
  flex-direction: row;
}

.beitMidrashUserNameStatus {
  flex-grow: 1;
}

.beitMidrashUserNameStatus .fa-headphones {
  margin-inline-start: 5px;
}

.beitMidrashOrg {
  font-weight: 200;
}

.noUsers {
  margin-top: 10px;
}
.noUsers input {
    background: #FBFBFA;
    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
    border-radius: 6px;
    border: none;
    width: calc(100% - 22px);
    padding: 15px 11px;
    font-family: "Roboto", "Helvetica Neue", "Helvetica", sans-serif;
    color: #666;
    font-style: normal;
    font-weight: normal;
    font-size: 16px;
    line-height: 19px;
    margin-top: 10px;
}

.chat {
  bottom: 0;
  right: 0;
  overflow: hidden;
  min-height: 300px;
  max-height: 300px;
  display: flex;
  flex-direction: column;
  padding-top: 20px;
  margin: 10px 30px 20px;
  border-top: 1px solid #999999;

}

#hideButtonHolder{
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
}

#hideButton {
  color: #CCCCCC;
  font-size: 14px;
  font-weight: 400;
  cursor: pointer;
}

.chatBoxHeader {
  display: flex;
  align-items: center;
  margin-top: 5px;
  justify-content: space-between;
}

#chatUser {
  display: flex;
  align-items: center;
  cursor: pointer;
}

#greenCameraButton {
  width: 24px;
  height: 12px;
  cursor: pointer;
}

.chatBoxName {
  margin-inline-start: 10px;
}


.chats-container {
  overflow-y: auto;
  display: flex;
  flex-grow:2;
  flex-direction: column;
}

.chatMessage {
  display: flex;
  margin: 7px 0;
  margin-inline-start: 4px;
}

.chatText {
  margin-inline-start: 13px;
  flex-grow: 1;
}

.chatNameAndTime {
  color: #999999;
  font-size: 14px;
  font-weight: 500px;
}

.chat-form {
  position: relative;
  bottom: 0;
  display: flex;
  align-items: center;
}

.chat-input-holder {
  background-color: black;
  display: flex;
  align-items: center;
  flex-direction: row;
  border-radius: 6px;
  padding: 0 15px;
  border: 0px;
  height: 50px;
  width: 100%;
  justify-content: space-between;
}

.chat-input {
  color: white;
  background: transparent;
  border: 0;
  display: flex;
  justify-content: flex-end;
  flex-grow:1;
  font-size: 16px;
}

.chat-input:active {
  outline: none;
}

.chat-submit {
  background-image: url("/static/img/chat_submit_arrow.svg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
  height: 20px;
  width: 18px;
  border: 0px;
  background-color: black;
  cursor: pointer;
}

.chat-submit-blue {
  background-image: url("/static/img/chat_submit_arrow_blue.svg");
}

.chat-submit-hebrew {
  -moz-transform: scaleX(-1);
  -o-transform: scaleX(-1);
  -webkit-transform: scaleX(-1);
  transform: scaleX(-1);
  filter: FlipH;
  -ms-filter: "FlipH";
}

.callContainer {
  display: flex;
  flex-direction: column;
  height: 100%;
}

.callContainer .default-profile-img,
.callContainer .img-circle {
  opacity: 0.25;
  border-radius: 0;
}

.callContainer .callText {
  margin: 53px 29px 23px;
  font-size: 22px;
  font-weight: 500;
}

.callContainer.incoming .callText {
  margin: 23px 29px;
}

#endCallButtonHolder {
  display: flex;
  width: 80%;
  justify-content: flex-end;
  margin-top: -50px;
}

#endCallIcon {
  display: inline-block;
  position: relative;
  background-image: url("/static/img/endcall.svg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
  opacity: 1;
  width: 20px;
  height: 20px;
}

.endCallButton {
  position: absolute;
  width: 40px;
  height: 30px;
  border-radius: 6px;
  z-index: 1;
  background-color: #CB6158;
  left: -8.5px;
  top: -3px;
  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
  background-image: url("/static/img/endcall.svg");
  background-position: center;
  background-repeat: no-repeat;
}

#incomingCallButtonHolder {
  display: flex;
  justify-content: space-evenly;
  margin: 15px;
}

#acceptButton {
  background-color: #5D956F;
  border-radius: 6px;
  color: white;
  border: 0px;
  height: 40px;
  width: 127.67px;
  margin: 5px;
  cursor: pointer;
}

#declineButton {
  background: #CB6158;
  border-radius: 6px;
  color: white;
  border: 0px;
  height: 40px;
  width: 127.67px;
  margin: 5px;
  cursor: pointer;
}

#currentlyReadingContainer {
  margin: 5px 30px;
  flex-grow: 1;
}

.blockButton {
  cursor: pointer;
}

.image-in-text {
    display: flex;
    justify-content: center;
    margin: 0 auto;
    max-width: 100%;
    height: auto;
    padding-top: 20px;
    padding-left: calc((100% - 2/3 * 100vw - 200px) / 2);
    padding-right: calc((100% - 2/3 * 100vw - 200px) / 2);
    flex-direction: column;
}

@media screen and (max-width: 540px) {
  .image-in-text {
    padding-left: calc((100% - 100vw) / 2);
    padding-right: calc((100% - 100vw) / 2);
    width: 100%;
    height: auto;
  }
}

@media screen and (min-aspect-ratio: 2/1) {
  .image-in-text {
    max-height: calc(4/3 * 2/3 * 100vw);
  }
}

@media screen and (min-width: 540px) {
  .image-in-text {
    width: 67%;
  }
}

.productsFlexWrapper {
  display: flex;
  flex-direction: column;
}

.product {
  max-width: 600px;
}

#productsPageContent {
  margin-inline-start: 70px;
  margin-top: 165px;
  margin-bottom: 165px;
}

.productInner {
  display: flex;
  align-items: right;
  flex-direction: row;
  flex-wrap: wrap;
}

.productInner img {
  max-width: 100%; 
  max-height: 116px;
  height: auto;
  display: block;
  margin-inline-end: 3%;
  padding-right: 20px;
  padding-bottom: 20px;
}

.productInner .productsDesc {
  font: var(--english-sans-serif-font-family); 
  color: var(--dark-grey);
  font-size: 16px;
}

.productImgWrapper {
  flex: 0 0 auto;
}

.productDescWrapper {
  flex: 1 1 auto;
}

.productsDesc p {
  margin-top: 0;
}
/* ... */

